Fixed some margin, textfield placeholder and scrollbar

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,3 +10,20 @@ html, body, #root, main {
 #root {
   width: 100%;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #08162C;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #FFEAFA;
+  border-radius: 80rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #FFC9F3;
+}
